--fixed spacing

--- a/basic.css
+++ b/basic.css
@@ -244,7 +244,7 @@ a{
 		font-size       : 30px;
 	}
 	.spacer {
-		padding-bottom  : 15px;
+		padding-bottom  : 30px;
 	}
 }
 
@@ -270,7 +270,7 @@ a{
 	font-size       : 30px;
 	}
 	.spacer {
-		padding-bottom : 20px;
+		padding-bottom : 30px;
 	}
 }
 
